--- a/manifest.json
+++ b/manifest.json
@@ -1,3 +1,4 @@
+
 {
   "name": "My AI Expense Tracker",
   "short_name": "Expenses",
@@ -11,12 +12,14 @@
     {
       "src": "/icon.svg",
       "sizes": "192x192",
-      "type": "image/svg+xml"
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
     },
     {
       "src": "/icon.svg",
       "sizes": "512x512",
-      "type": "image/svg+xml"
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
     },
     {
       "src": "/icon.svg",
